# SE3_DMP

./: .gitignore  README.md
c++/: replace_text.sh  search_text.sh
c++/install/: install_Kinect_OpenNI_PrimeSense.sh  install_armadillo.sh  install_ati_sensor.sh  install_barretthand.sh  install_eigen3.sh  install_frilibrary.sh  install_mujoco.sh  install_optoforce.sh  install_qt5.sh  install_ros_deps.sh  install_ur_simulator.sh  main.sh
c++/src/dmp_orient_test/: CMakeLists.txt
c++/src/dmp_orient_test/include/dmp_orient_test/: dmp_orient_test.h
c++/src/dmp_orient_test/launch/: dmp_orient_test.launch
c++/src/dmp_orient_test/plot/: plotSimResults.m
c++/src/dmp_orient_test/src/: dmp_orient_test.cpp  main.cpp
c++/src/dmp_pos_test/: CMakeLists.txt  package.xml
c++/src/dmp_pos_test/include/dmp_pos_test/: dmp_pos_test.h
c++/src/dmp_pos_test/launch/: dmp_pos_test.launch
c++/src/dmp_pos_test/plot/: plotSimResults.m
c++/src/dmp_pos_test/plot/utils/io_lib/: read_mat.m  read_mat2.m  write_mat2.m
c++/src/dmp_pos_test/plot/utils/math_lib/: quatExp.m
c++/src/dmp_pos_test/src/: dmp_pos_test.cpp  main.cpp
c++/src/lib/dmp_lib/: CMakeLists.txt
c++/src/lib/dmp_lib/include/dmp_lib/: dmp_defs.h  dmp_lib.h
c++/src/lib/dmp_lib/include/dmp_lib/CanonicalClock/: CanonicalClock.h
c++/src/lib/dmp_lib/include/dmp_lib/DMP/: DMP.h  DMP_orient.h  DMP_pos.h  WSoG.h
c++/src/lib/dmp_lib/include/dmp_lib/GatingFunction/: ExpGatingFunction.h  GatingFunction.h  LinGatingFunction.h  SigmoidGatingFunction.h
c++/src/lib/dmp_lib/include/dmp_lib/trainMethods/: LWR.h  LeastSquares.h
c++/src/lib/dmp_lib/src/CanonicalClock/: CanonicalClock.cpp
c++/src/lib/dmp_lib/src/DMP/: DMP.cpp  DMP_orient.cpp  DMP_pos.cpp  WSoG.cpp
c++/src/lib/dmp_lib/src/GatingFunction/: ExpGatingFunction.cpp  GatingFunction.cpp  LinGatingFunction.cpp  SigmoidGatingFunction.cpp
c++/src/lib/dmp_lib/src/trainMethods/: LWR.cpp  LeastSquares.cpp
c++/src/lib/io_lib/: CMakeLists.txt
c++/src/lib/io_lib/include/io_lib/: io_lib.h  io_utils.h  parser.h
c++/src/lib/io_lib/include/io_lib/termcolor/: termcolor.hpp
c++/src/lib/io_lib/src/: io_utils.cpp  parser.cpp
c++/src/lib/math_lib/: CMakeLists.txt
c++/src/lib/math_lib/codegen/mat2quat/: buildInfo.mat  codeInfo.mat  gcGuiReport.mat  mat2quat.cpp  mat2quat.h  mat2quat_initialize.cpp  mat2quat_initialize.h  mat2quat_rtw.mk  mat2quat_rtwutil.cpp  mat2quat_rtwutil.h  mat2quat_terminate.cpp  mat2quat_terminate.h  mat2quat_types.h  mod.cpp  mod.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  schur.cpp  schur.h  sqrt.cpp  sqrt.h  xdhseqr.cpp  xdhseqr.h  xdlanv2.cpp  xdlanv2.h  xgehrd.cpp  xgehrd.h  xgerc.cpp  xgerc.h  xnrm2.cpp  xnrm2.h  xrot.cpp  xrot.h  xungorghr.cpp  (+15 more)
c++/src/lib/math_lib/codegen/mat2quat/examples/: main.cpp  main.h
c++/src/lib/math_lib/codegen/mat2quat/interface/: _coder_mat2quat_api.c  _coder_mat2quat_api.h  _coder_mat2quat_info.c  _coder_mat2quat_info.h  _coder_mat2quat_mex.cpp  _coder_mat2quat_mex.h
c++/src/lib/math_lib/include/math_lib/: math.h  quaternions.h
c++/src/lib/math_lib/src/: math.cpp  quaternions.cpp
c++/src/robots/kuka/lwr4p/: CMakeLists.txt  package.xml
c++/src/robots/kuka/lwr4p/cmake/: FindFastResearchInterfaceLibrary.cmake  FindTypeIRML.cmake
c++/src/robots/kuka/lwr4p/include/lwr4p/: Robot.h
c++/src/robots/kuka/lwr4p/src/lwr4p/: Robot.cpp
c++/src/se3_dmp/: CMakeLists.txt  package.xml
c++/src/se3_dmp/include/se3_dmp/: se3_dmp.h  utils.h
c++/src/se3_dmp/include/se3_dmp/gui/: mainwindow.cpp  mainwindow.h  utils.cpp  utils.h  view_jpos_dialog.cpp  view_jpos_dialog.h  view_pose_dialog.cpp  view_pose_dialog.h
c++/src/se3_dmp/include/se3_dmp/robot/: lwr4p_robot.h  lwr4p_sim_robot.h  robot.h
c++/src/se3_dmp/launch/: se3_dmp.launch
c++/src/se3_dmp/plot/: plotExecResults.m  test_sigmoid.m
c++/src/se3_dmp/plot/utils/io_lib/: write_mat.m  write_scalar.m
c++/src/se3_dmp/plot/utils/math_lib/: quatInv.m
c++/src/se3_dmp/src/: main.cpp  se3_dmp.cpp
c++/src/se3_dmp/src/source_list/: se3_dmp.cpp  utils.cpp
c++/src/se3_dmp/src/source_list/robot/: lwr4p_robot.cpp  lwr4p_sim_robot.cpp  robot.cpp
matlab/: DMP_orient_comp_az_20.fig  DMP_orient_comp_az_250.fig  DMP_orient_comp_az_60.fig  dmp_eo_test.m  dmp_orient_test.m  dmp_pos_orient_stopping_test.m  dmp_pos_orient_stopping_test2.m  dmp_pos_orient_test.m  dmp_pos_test.m  leonidas_data.mat  process_demo_data.m  set_matlab_utils_path.m  simulateDMPeo.m  simulateOrientDMP.m  simulatePosDMP.m  temp.m  test_orient_DMP.m  test_orient_error.m
matlab/data/: demo_data.mat  dmp_data.mat  fotis_data.mat  kuka_data.mat  leonidas_data.mat  orient_data.mat  recorded_data.mat  training_data.mat
matlab/figs/: DMP_orient_comp_az_120.fig
matlab/leo_dmp_eo/: fotis_data.mat  getJacobianAcceleration.m  test_acc.m
matlab/utils/: plotPosQuatData.m  simulateDMP.m  simulateOrientDMP.m  simulatePosOrientDMP.m
matlab/utils/lib/DMP_lib/: CanonicalClock.m  DMP.m  DMP_eo.m  DMP_orient.m  DMP_orient_old.m  DMP_pos.m  ExpGatingFunction.m  LinGatingFunction.m  SigmoidGatingFunction.m  WSoG.m  leastSquares.m
matlab/utils/lib/io_lib/: read_rowVec.m  read_scalar.m  read_vec.m  read_vec_mat.m  write_rowVec.m  write_vec.m  write_vec_mat.m
matlab/utils/lib/math_lib/: get5thOrderParams.m  qpos2quat.m  quat2qpos.m
matlab/utils/lib/plot_lib/: animate_3d_trajectory_of_frames.m  get_frame_handle.m  plot_3Dpath_with_orientFrames.m
